Add(seedes for setting). + Swaggers for (Reports). And edit swagers for (salon ,and services ).
